<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="androidx.core.content.ContextCompat"/>
        <variable
            name="viewmodel"
            type="com.cvrabbit.cvsentence.viewmodel.BaseSettingsViewModel"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/baseSettingsCl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    tools:context=".view.BaseSettings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/baseSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/baseSettingsTitle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/solid_lightgreen"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:src="@drawable/vector_back" />

            <TextView
                android:id="@+id/baseSettingsTitleWord"
                style="@style/TextOnTitle"
                android:drawableStart="@drawable/vector_setting_big"
                android:text="@string/bs_title" />
        </FrameLayout>

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseSettingsTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/baseSettingsContents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/white_100"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="30dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/soundEnableSetting"
                                style="@style/TextOnSubTitle"
                                android:text="@string/bsc_soundtitle"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginEnd="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/selectedWordSoundText"
                                    style="@style/TextOnLinearLayoutFullWeight"
                                    android:text="@string/bsc_onselectword_sound" />

                                <androidx.appcompat.widget.SwitchCompat
                                    android:id="@+id/selectedWordSound"
                                    style="@style/CustomSwitch" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginEnd="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/selectedMeaningSoundText"
                                    style="@style/TextOnLinearLayoutFullWeight"
                                    android:text="@string/bsc_onselectmeaning_sound"/>

                                <androidx.appcompat.widget.SwitchCompat
                                    android:id="@+id/selectedMeaningSound"
                                    style="@style/CustomSwitch" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginEnd="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/onDemandWordSoundText"
                                    style="@style/TextOnLinearLayoutFullWeight"
                                    android:text="@string/bsc_ontapword_sound"/>

                                <androidx.appcompat.widget.SwitchCompat
                                    android:id="@+id/onDemandWordSound"
                                    style="@style/CustomSwitch" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginEnd="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/onDemandMeaningSoundText"
                                    style="@style/TextOnLinearLayoutFullWeight"
                                    android:text="@string/bsc_ontapword_sound"/>

                                <androidx.appcompat.widget.SwitchCompat
                                    android:id="@+id/onDemandMeaningSound"
                                    style="@style/CustomSwitch" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/soundVolumeSetting"
                                style="@style/TextOnSubTitle"
                                android:text="@string/bsc_volume" />

                            <SeekBar
                                android:id="@+id/volumeSeekBar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="30dp"
                                android:indeterminate="false"
                                android:progressDrawable="@drawable/seekbar_custom"
                                android:thumb="@drawable/seekbar_custom_thumb" />

                            <TextView
                                android:id="@+id/floatingSetting"
                                style="@style/TextOnSubTitle"
                                android:text="@string/bsc_floatingposition" />

                            <Spinner
                                android:id="@+id/floatSpinner"
                                style="@style/CustomSpinner"
                                android:entries="@array/floating_type" />

                            <TextView
                                android:id="@+id/referenceSetting"
                                style="@style/TextOnSubTitle"
                                android:text="@string/bsc_reference_setting" />

                            <TextView
                                android:id="@+id/referenceSettingDescription"
                                style="@style/TextOnDescription"
                                android:text="@string/bsc_reference_setting_description" />

                            <Button
                                android:id="@+id/referenceRegister"
                                style="@style/NormalButtonBlue"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:text="@string/bsc_reference_register"/>

                            <TextView
                                android:id="@+id/csvExportTitle"
                                style="@style/TextOnSubTitle"
                                android:text="@string/bsc_csv_export" />

                            <TextView
                                android:id="@+id/csvExportSaveDir"
                                style="@style/TextOnDescription"
                                android:text="@string/bsc_csv_export_save_dir"/>

                            <Button
                                android:id="@+id/csvExport"
                                style="@style/NormalButtonBlue"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="60dp"
                                android:text="@string/bsc_csv_export_button"/>

                            <androidx.fragment.app.FragmentContainerView
                                android:id="@+id/fragment_container_for_base"
                                android:name="com.cvrabbit.cvsentence.view.AdMob"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>