<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="androidx.core.content.ContextCompat"/>
        <variable
            name="viewmodel"
            type="com.cvrabbit.cvsentence.viewmodel.MainActivityViewModel"/>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/solid_lightgray_corners_rounded10dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tabCl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tabCl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".view.TabFragment">

        <Button
            android:id="@+id/sortButton"
            style="@style/MenuButtonBlue"
            android:drawableStart="@drawable/vector_sort"
            android:text="@string/ft_sort_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/barrier_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barrier" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="recordButtonOff,recordButtonOn" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left"
            app:constraint_referenced_ids="recordButtonOff,recordButtonOn" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="recordButtonOff,recordButtonOn" />

        <Button
            android:id="@+id/recordButtonOff"
            style="@style/CircleButtonBlue"
            android:layout_marginBottom="5dp"
            android:text="@string/ft_floating_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/recordButtonOn"
            style="@style/CircleButtonRed"
            android:layout_marginBottom="5dp"
            android:text="@string/ft_floating_stop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/baseButton"
            style="@style/MenuButtonBlue"
            android:drawableStart="@drawable/vector_setting"
            android:text="@string/ft_base_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/barrier_right"
            app:layout_constraintTop_toTopOf="@+id/barrier" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>